<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_centerVertical="true">

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView1"
            android:text="@string/adding_task_activity_task_name_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/textField_taskName" />
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:text="@string/adding_task_activity_description_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/textField_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/adding_task_activity_priority_title" />

        <RadioGroup
            android:id="@+id/priorityRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adding_task_activity_radio_low" />
            <RadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adding_task_activity_radio_medium"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radioButtonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adding_task_activity_radio_high" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/adding_task_activity_deadline_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />

        <EditText
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/textField_date" />

    </LinearLayout>

        <LinearLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/adding_task_activity_finished"
                android:layout_width="85dp"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/completion_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    <Button
        android:text="@string/ok_button_text"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/adding_task_activity_addbutton"
        android:layout_marginTop="27dp" />

    </LinearLayout>
</RelativeLayout>